第二次修改

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,9 +3,7 @@
 #jdbc.username=c##school
 #jdbc.password=123456
 
-jdbc.driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/orcl
-username=root
-password=123456
-min=5
-max=20
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/orcl
+jdbc.username=root
+jdbc.password=123456
