第三次修改

--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,16 @@
     </dependency>
 
 
+
+
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>5.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>MYX_SSM</finalName>
